--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-beautifulsoup4==4.13.3
+playwright>=1.37.0
+beautifulsoup4>=4.12.2
+markdownify>=0.11.6
+pyyaml>=6.0
+lxml>=4.9.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 greenlet==3.1.1
 idna==3.10
-lxml==5.3.2
-markdownify==1.1.0
-playwright==1.51.0
 pyee==12.1.1
-PyYAML==6.0.2
 requests==2.32.3
 six==1.17.0
 soupsieve==2.6
